--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,11 @@ redis = "^5.0.7"
 pytz = "^2024.1"
 pycryptodome = "^3.20.0"
 djangorestframework-simplejwt = "^5.3.1"
-drf-yasg = "^1.21.7"
-drf-spectacular = "^0.27.2"
 model-bakery = "^1.18.2"
+pyyaml = "^6.0.1"
+uritemplate = "^4.1.1"
+inflection = "^0.5.1"
+drf-spectacular = "^0.27.2"
 
 [build-system]
 requires = ["poetry-core"]
